<resources>
    <string name="app_name" translatable="false">OPSC_POE_PART_2</string>
    <string name="guest">Guest</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="sign_up_underlined"><u>Sign Up</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="or_sign_in_with">Or Sign In With</string>
    <string name="enter_your_details">Enter your details</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="add_image">Add Image</string>
    <string name="continue_">Continue</string>
    <string name="details">Details</string>
    <string name="friends">Friends</string>
    <string name="settings">Settings</string>
    <string name="quizzes">Quizzes</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="username">Username</string>
    <string name="welcome">Welcome</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="score_display">Score:</string>
    <string name="add_friend">Add Friend</string>
    <string name="add_friends">Add Friends</string>
    <string name="search">Search</string>
    <string name="requests">Requests</string>
    <string name="add">Add</string>
    <string name="search_username">Search Username</string>
    <string name="request_sent">Request Sent</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="large">Large</string>
    <string name="medium">Medium</string>
    <string name="small">Small</string>
    <string name="choose_font_size">Choose Font Size</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="white">White</string>
    <string name="choose_theme_color">Choose Theme Color</string>
    <string name="set_notification_time">Set notification time</string>
    <string name="language">Language</string>
    <string name="page_name">Page Name</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="dashboard">Dashboard</string>
    <string name="user_not_found">User not found</string>
    <string name="error">Error: %1$s</string>
</resources>