<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SettingsActivity"
    android:background="@drawable/sign_up_background"
    android:orientation="vertical">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">
    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="15dp"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/setting"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings"
            android:textStyle="bold"
            android:textSize="36sp"/>

    </LinearLayout>
    <TextView
        android:id="@+id/tvColorPickerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_theme_color"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_margin="15dp"
        />

    <RadioGroup
        android:id="@+id/rgColors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_margin="15dp"
        >

        <RadioButton
            android:id="@+id/rbWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/white" />

        <RadioButton
            android:id="@+id/rbBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue" />

        <RadioButton
            android:id="@+id/rbGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green" />
    </RadioGroup>

    <!-- Font Size Options -->
    <TextView
        android:id="@+id/tvFontSizeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_font_size"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <RadioGroup
        android:id="@+id/rgFontSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_margin="15dp"
        >

        <RadioButton
            android:id="@+id/rbSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/small" />

        <RadioButton
            android:id="@+id/rbMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/rbLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/large" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        > <!-- Dark Mode Switch -->
        <TextView
            android:id="@+id/tvDarkModeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_dark_mode"
            android:layout_marginStart="16dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchDarkMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tvDarkModeLabel"
            app:layout_constraintStart_toEndOf="@id/tvDarkModeLabel"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/setNotificationTimeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_notification_time"
        android:backgroundTint="@color/white"
        android:layout_margin="15dp"
        android:textColor="@color/lavender"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textSize="20sp"
                android:layout_margin="15dp"/>

          <Spinner
              android:id="@+id/languageSpinner"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:backgroundTint="@color/white"
              android:textAlignment="center"
              android:layout_marginStart="30dp"
              />
        </LinearLayout>

    </LinearLayout>
    </ScrollView>
</LinearLayout>