<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".MainActivity"
    android:gravity="center"
    android:padding="32dp"
    android:orientation="vertical">



    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/login_icon"
        />

    <EditText
        android:id="@+id/emailET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:padding="18dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_corner_edit_text"/>
    <EditText
        android:id="@+id/passwordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:padding="18dp"
        android:inputType="textPassword"
        android:background="@drawable/rounded_corner_edit_text"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="@color/white"
        android:textColor="@color/lavender"
        android:padding="18dp"
        android:layout_marginTop="32dp"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/signUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_underlined"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        android:focusable="true"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginTop="50dp"
        android:text="@string/or_sign_in_with" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:gravity="center">
        <ImageView
            android:id="@+id/googleBtn"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="16dp"
            android:src="@drawable/google"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground" />
    </LinearLayout>

</LinearLayout>


