<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:orientation="vertical"
    android:background="@drawable/sign_up_background"
    android:gravity="center">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/login_icon"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="36dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/emailET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:padding="18dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_corner_edit_text"/>
    <EditText
        android:id="@+id/passwordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:padding="18dp"
        android:inputType="textPassword"
        android:background="@drawable/rounded_corner_edit_text"/>

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:backgroundTint="@color/white"
        android:textColor="@color/lavender"
        android:padding="18dp"
        android:layout_marginTop="32dp"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:textColor="@color/white"/>
</LinearLayout>