<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FriendsActivity"
    android:orientation="vertical"
    android:background="@drawable/sign_up_background">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>
    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar">
        <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/friends"
        android:layout_gravity="center"
        android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/friends"
            android:textStyle="bold"
            android:textSize="36sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addFriendsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:elevation="8dp"
            android:text="@string/add"
            android:drawableLeft="@drawable/add_icon"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:backgroundTint="@color/lightGrey"
        />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_margin="20dp"
        android:id="@+id/friendsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="520dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/titleLayout"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/requestsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/lightGrey"
        android:layout_margin="20dp"
        android:elevation="8dp"
        android:text="@string/requests"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
/>

</androidx.constraintlayout.widget.ConstraintLayout>