<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity"
    android:background="@drawable/login_background"
    android:orientation="vertical">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
     <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/home"
        app:tint="@color/white"
        android:layout_marginBottom="24dp"
        android:elevation="12dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/usernameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_gravity="center"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginBottom="36dp"/>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="3"
        android:columnCount="2">

        <androidx.cardview.widget.CardView
            android:id="@+id/quizzesBtn"
            android:layout_width="170dp"
            android:layout_height="170dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="12dp"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_gravity="end"
            android:layout_marginBottom="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/quiz"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    app:tint="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/quizzes"
                    android:layout_gravity="center"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/addQuizBtn"
            android:layout_width="170dp"
            android:layout_height="170dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="12dp"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_gravity="end"
            android:layout_marginBottom="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/add_quiz"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    app:tint="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/create_quiz"
                    android:layout_gravity="center"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/friendsBtn"
            android:layout_width="170dp"
            android:layout_height="170dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="12dp"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_marginBottom="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/add_friend"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    app:tint="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/friends"
                    android:layout_gravity="center"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/leaderboardBtn"
            android:layout_width="170dp"
            android:layout_height="170dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="12dp"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_gravity="end">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/leaderboard"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    app:tint="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/leaderboard"
                    android:layout_gravity="center"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/settingsBtn"
            android:layout_width="170dp"
            android:layout_height="170dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="12dp"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_gravity="end"
            android:layout_marginBottom="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/setting"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    app:tint="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/settings"
                    android:layout_gravity="center"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>




    </GridLayout>
</LinearLayout>
    </ScrollView>
</LinearLayout>